--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -50,7 +50,7 @@
 	color: colors.$primary;
 	font-size: 30px;
 
-	@media screen and (min-width: 700px) {
+	@media screen and (min-width: 950px) {
 		display: none;
 	}
 }
@@ -79,6 +79,7 @@
 		padding: 0;
 		width: auto;
 		margin-top: 0;
+		transition: none;
 		}
 }
 
